fix(chat): add baseline alignment for display name

--- a/src/app/routes/chat/chat.component.css
+++ b/src/app/routes/chat/chat.component.css
@@ -41,6 +41,7 @@ p {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  align-self: baseline;
 }
 .message-wrap {
   display: inline-block;
